Fix layout shift issue

--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,29 @@ body {
   font-family: "Poppins", sans-serif;
   background: #f5f4fb;
 }
+
+.content-wrapper {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.content-input-wrapper {
+  height: 300px;
+  display: flex;
+  margin-bottom: 60px;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.content-alert-wrapper {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
